project image is changed

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/travl.img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/kopiko.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>WEB 2</h4>
               <p>WEB</p>
