--- a/index.html
+++ b/index.html
@@ -522,10 +522,11 @@
       <form id="gform" method="post" action="https://script.google.com/macros/s/AKfycbxj4H-2qIuSbURqq5gRjvFiEqIgMK6YjBCxFFA5hNL8AIWxyTWy4toBk4jv42fDk5QQfg/exec">
         <div class="row">
           <div class="col-md-6 form-group">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+            <input type="text" name="name" class="form-control" id="name" pattern="[a-zA-Z][a-zA-Z ]{2,}" placeholder="Your Name" required>
           </div>
           <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+            <input type="email" class="form-control" name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="Your Email" required>
+            <span id="email-error">email is required</span>
           </div>
         </div>
         <div class="form-group mt-3">
